Signed-off-by: jgtravagine <xr_gabriel@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <p id="xpEmail" class="xpAnimation text-end">+9</p>
                             </div>
                         </div>
-                        <input type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" name="emailPessoa" id="emailPessoa" placeholder="Digite seu email" class="form-control" required>
+                        <input type="email" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}$" name="emailPessoa" id="emailPessoa" placeholder="Digite seu email" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <div class="row">
